--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,15 @@
     <title>Lauren Maclean - Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <a class="nav_link" href="../src/index.html"><h1>_LAUREN MACLEAN_</h1></a>
+        <nav class="nav-container">
+            <ul class="nav_items">
+                <li><a class="nav_link" href="">PORTFOLIO</a></li>
+                <li><a class="nav_link" href="">ABOUT + RESUME</a></li>
+                <li><a class="nav_link" href="">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
